<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.nata.hallimane.SignUp"
    android:background="@drawable/back3"
    android:id="@+id/activity_signup"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:gravity="fill_horizontal"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:minHeight="?attr/actionBarSize"
        android:background="#483d8b">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <TextView
                android:id="@+id/SignInText"
                android:text="Sign Up"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/signupFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/AllName"
                        android:gravity="center"
                        android:hint="@string/signupfirstname"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#000000"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/signupLastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/AllName"
                        android:gravity="center"
                        android:hint="@string/signuplastname"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#000000"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/signupEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/AllEmail"
                        android:gravity="center"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#000000"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/signupPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/AllPassword"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#000000"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/signupConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/AllPassword"
                        android:gravity="center"
                        android:hint="@string/signupConfirmPassword"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="#000000"/>
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789-"
                        android:gravity="center"
                        android:hint="@string/date_of_birth"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:textColor="#000000"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/static_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:textAlignment="center"/>
                </android.support.design.widget.TextInputLayout>
                    <Button
                        android:id="@+id/signupSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/my_button_bg"
                        android:onClick="SignUp"
                        android:text="@string/signupbtn"
                        android:layout_gravity="center"
                        android:textColor="#263238"/>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="5dip"
                android:text= "@string/already_have_an_account" />
            <TextView
                android:id="@+id/Signuplogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/sign_in"
                android:textSize="20dp"
                android:textColor="#006699"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
