<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerVertical="true"
    android:background="@drawable/back3"
    android:id="@+id/activity_main">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:gravity="fill_horizontal"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:minHeight="?attr/actionBarSize"
        android:background="#483d8b">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <TextView
                android:id="@+id/SignInText"
                android:text="Sign In"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextView"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/toolbar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextView1"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/toolbar"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/TextView"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">
        <EditText
            android:id="@+id/hmeUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:digits="@string/AllEmail"
            android:gravity="center"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHighlight="@color/colorPrimaryDark"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/TextView1"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:id="@+id/textInputLayout">
        <EditText
            android:id="@+id/hmePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hmeUsername"
            android:digits="@string/AllPassword"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#000000"
            android:gravity="center"
            android:textColorHighlight="@color/colorPrimaryDark"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FORGOTPASSWORD"
        android:id="@+id/ForgotPassword"
        android:layout_below="@+id/hmeButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:textColor="@android:color/holo_red_dark"/>

    <!--  <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/hmeSignup"
          android:background="@drawable/my_button_bg"
          android:text="@string/signuphme"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true" />-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ORNEW"
        android:id="@+id/hmeSignup"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/ForgotPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#800080"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:id="@+id/hmeButton"
        android:background="@drawable/my_button_bg"
        android:onClick="SignIn"
        android:text="@string/loginhme"
        android:layout_gravity="center"
        android:layout_below="@+id/textInputLayout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>