<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    tools:context="com.example.nata.hallimane.UpdatePassword">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:gravity="fill_horizontal"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:minHeight="?attr/actionBarSize"
        android:background="#483d8b">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <TextView
                android:id="@+id/SignInText"
                android:text="Forgot Password"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:id="@+id/textInputLayout4">
        <EditText
            android:id="@+id/UpdatepasswordOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:digits="@string/AllPassword"
            android:hint="@string/enter_new_password"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:textColor="#000000"
            android:gravity="center"
            android:singleLine="true"
            android:textColorHighlight="@color/colorPrimaryDark"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:layout_below="@+id/textInputLayout4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textInputLayout5">
        <EditText
            android:id="@+id/UpdatePasswordReTtpe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:digits="@string/AllPassword"
            android:hint="@string/retype_new_password"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:textColor="#000000"
            android:gravity="center"
            android:singleLine="true"
            android:textColorHighlight="@color/colorPrimaryDark"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/UpdatePasswordBtnwotLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/my_button_bg"
        android:textAlignment="center"
        android:text="UPDATE"
        android:onClick="invokeUpdate"
        android:layout_below="@+id/textInputLayout5"
        android:layout_centerHorizontal="true" />
</RelativeLayout>