<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.nata.hallimane.ChanegPasswordFragment">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:elevation="4dp"
        android:fitsSystemWindows="true"
        android:gravity="fill_horizontal"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:minHeight="?attr/actionBarSize"
        android:background="#483d8b">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <TextView
                android:id="@+id/SignInText"
                android:text="Update Password"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:id="@+id/textInputLayout"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/toolbar"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <EditText
                    android:id="@+id/UpdateCurrentPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/AllPassword"
                    android:hint="Enter Current Password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:textColorHighlight="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:id="@+id/textInputLayout1"
                android:layout_below="@+id/textInputLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <EditText
                    android:id="@+id/UpdateNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hmeUsername"
                    android:digits="@string/AllPassword"
                    android:hint="@string/enter_new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:textColorHighlight="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:id="@+id/textInputLayout2"
                android:layout_below="@+id/textInputLayout1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <EditText
                    android:id="@+id/UpdateNewPasswordAgain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hmeUsername"
                    android:digits="@string/AllPassword"
                    android:hint="@string/retype_new_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:textColorHighlight="@color/colorPrimaryDark"/>
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/UpdatepasswordBtn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="Update"
                android:textAlignment="center"
                android:layout_below="@+id/textInputLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="13dp"
                android:layout_gravity="center"
                android:background="@drawable/my_button_bg"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
